@@ -447,7 +447,13 @@ static void	got_thresh_reading(ipmi_sensor_t *sensor, int err, enum ipmi_value_p
 
 		h->err = zbx_dsprintf(h->err, "error 0x%x while reading threshold sensor", err);
 		h->ret = NETWORK_ERROR;
-		h->done = 1;
+		goto out;
+	}
+
+	if (0 == ipmi_is_sensor_scanning_enabled(states) || 0 != ipmi_is_initial_update_in_progress(states))
+	{
+		h->err = zbx_strdup(h->err, "sensor data is not available");
+		h->ret = NOTSUPPORTED;
 		goto out;
 	}
 
@@ -456,9 +462,8 @@ static void	got_thresh_reading(ipmi_sensor_t *sensor, int err, enum ipmi_value_p
 	if (NULL == s)
 	{
 		THIS_SHOULD_NEVER_HAPPEN;
-		h->err = zbx_dsprintf(h->err, "fatal error");
+		h->err = zbx_strdup(h->err, "fatal error");
 		h->ret = NOTSUPPORTED;
-		h->done = 1;
 		goto out;
 	}
 
@@ -466,7 +471,7 @@ static void	got_thresh_reading(ipmi_sensor_t *sensor, int err, enum ipmi_value_p
 	{
 		case IPMI_NO_VALUES_PRESENT:
 		case IPMI_RAW_VALUE_PRESENT:
-			h->err = zbx_dsprintf(h->err, "no value present for threshold sensor");
+			h->err = zbx_strdup(h->err, "no value present for threshold sensor");
 			h->ret = NOTSUPPORTED;
 			break;
 		case IPMI_BOTH_VALUES_PRESENT:
@@ -502,8 +507,9 @@ static void	got_thresh_reading(ipmi_sensor_t *sensor, int err, enum ipmi_value_p
 					mod_use, modifier, rate);
 			break;
 	}
-	h->done = 1;
 out:
+	h->done = 1;
+
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s():%s", __function_name, zbx_result_string(h->ret));
 }
 
@@ -512,13 +518,19 @@ static void	got_discrete_states(ipmi_sensor_t *sensor, int err, ipmi_states_t *s
 {
 	const char		*__function_name = "got_discrete_states";
 	char			id_str[2 * IPMI_SENSOR_ID_SZ + 1];
-
 	int			id, i, val, ret, is_state_set;
 	ipmi_entity_t		*ent;
 	zbx_ipmi_host_t		*h = cb_data;
 	zbx_ipmi_sensor_t	*s;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
+
+	if (0 == ipmi_is_sensor_scanning_enabled(states) || 0 != ipmi_is_initial_update_in_progress(states))
+	{
+		h->err = zbx_strdup(h->err, "sensor data is not available");
+		h->ret = NOTSUPPORTED;
+		goto out;
+	}
 
 	s = get_ipmi_sensor(h, sensor);
 
@@ -572,7 +584,6 @@ static void	read_ipmi_sensor(zbx_ipmi_host_t *h, zbx_ipmi_sensor_t *s)
 {
 	const char	*__function_name = "read_ipmi_sensor";
 	char		id_str[2 * IPMI_SENSOR_ID_SZ + 1];
-
 	int		ret;
 	const char	*s_reading_type_string;
 	struct timeval	tv;
@@ -681,7 +692,7 @@ static void	got_control_reading(ipmi_control_t *control, int err, int *val, void
 	if (NULL == c)
 	{
 		THIS_SHOULD_NEVER_HAPPEN;
-		h->err = zbx_dsprintf(h->err, "fatal error");
+		h->err = zbx_strdup(h->err, "fatal error");
 		h->ret = NOTSUPPORTED;
 		goto out;
 	}
@@ -689,7 +700,7 @@ static void	got_control_reading(ipmi_control_t *control, int err, int *val, void
 	if (c->num_values == 0)
 	{
 		THIS_SHOULD_NEVER_HAPPEN;
-		h->err = zbx_dsprintf(h->err, "no value present for control");
+		h->err = zbx_strdup(h->err, "no value present for control");
 		h->ret = NOTSUPPORTED;
 		goto out;
 	}
@@ -735,7 +746,7 @@ static void	got_control_setting(ipmi_control_t *control, int err, void *cb_data)
 	if (NULL == c)
 	{
 		THIS_SHOULD_NEVER_HAPPEN;
-		h->err = zbx_dsprintf(h->err, "fatal error");
+		h->err = zbx_strdup(h->err, "fatal error");
 		h->ret = NOTSUPPORTED;
 		h->done = 1;
 		return;
@@ -758,7 +769,7 @@ static void	read_ipmi_control(zbx_ipmi_host_t *h, zbx_ipmi_control_t *c)
 
 	if (0 == ipmi_control_is_readable(c->control))
 	{
-		h->err = zbx_dsprintf(h->err, "control is not readable");
+		h->err = zbx_strdup(h->err, "control is not readable");
 		h->ret = NOTSUPPORTED;
 		goto out;
 	}
@@ -795,7 +806,7 @@ static void	set_ipmi_control(zbx_ipmi_host_t *h, zbx_ipmi_control_t *c, int valu
 	if (c->num_values == 0)
 	{
 		THIS_SHOULD_NEVER_HAPPEN;
-		h->err = zbx_dsprintf(h->err, "no value present for control");
+		h->err = zbx_strdup(h->err, "no value present for control");
 		h->ret = NOTSUPPORTED;
 		h->done = 1;
 		goto out;
@@ -803,7 +814,7 @@ static void	set_ipmi_control(zbx_ipmi_host_t *h, zbx_ipmi_control_t *c, int valu
 
 	if (0 == ipmi_control_is_settable(c->control))
 	{
-		h->err = zbx_dsprintf(h->err, "control is not settable");
+		h->err = zbx_strdup(h->err, "control is not settable");
 		h->ret = NOTSUPPORTED;
 		goto out;
 	}
